[gd_scene load_steps=36 format=3 uid="uid://4fw2d44pjwu8"]

[ext_resource type="Script" uid="uid://cmvw2cbm4tsjx" path="res://Scripts/Gameplay/LevelManager.gd" id="1_l4uv0"]
[ext_resource type="Resource" uid="uid://cjdqe6klu8mrp" path="res://Scenes/ActualLevels/Level_0 (template)/Level_0LevelState.tres" id="2_tmr10"]
[ext_resource type="Texture2D" uid="uid://brxlhvqiljfpa" path="res://Artwork/GameObjects/border.png" id="4_5aqag"]
[ext_resource type="Script" uid="uid://dfe4q4poqeng5" path="res://Scripts/Gameplay/LevelGrid.gd" id="5_08tqb"]
[ext_resource type="Script" uid="uid://ljmcy60pov5l" path="res://Scripts/Gameplay/BoxFiller.gd" id="6_ve7s6"]
[ext_resource type="Script" uid="uid://noib4t5r4qax" path="res://Scripts/UI_Scripts/RerollButton.gd" id="7_bu5an"]
[ext_resource type="Script" uid="uid://c3qfxtnd08lrf" path="res://Scripts/Gameplay/RibbonAnimator.gd" id="8_ojvbg"]
[ext_resource type="Texture2D" uid="uid://crdrtg5o00e53" path="res://Artwork/Player/Ribbon-Sheet.png" id="9_5h57o"]
[ext_resource type="Texture2D" uid="uid://bv3dsa5d5scx1" path="res://Artwork/Player/Ribbon-Faces.png" id="10_qdhxq"]
[ext_resource type="Texture2D" uid="uid://ccfwyp4b2l36j" path="res://Artwork/Player/RibbonArms.png" id="11_6ge3b"]
[ext_resource type="Texture2D" uid="uid://ce0xt248y0d5x" path="res://Artwork/GameObjects/Box.png" id="11_jcv13"]
[ext_resource type="PackedScene" uid="uid://cwepxmyofmf4r" path="res://Scenes/UI_Objects/pause_menu.tscn" id="12_ig5go"]
[ext_resource type="Script" uid="uid://xgdtyc2a8otu" path="res://Scripts/UI_Scripts/PauseMenu.gd" id="13_3in4i"]
[ext_resource type="PackedScene" uid="uid://citcs1qcfo0ru" path="res://Scenes/UI_Objects/WinLoseScreen.tscn" id="14_b2ivo"]
[ext_resource type="Shader" uid="uid://cp6hevxbkcwd1" path="res://Scripts/Shaders/PerspectiveSkew.gdshader" id="14_tmr10"]
[ext_resource type="Texture2D" uid="uid://kk6mn34u32h6" path="res://Artwork/UI/MagicSquare.png" id="15_f3sbs"]
[ext_resource type="Script" uid="uid://bbq7x1mya6l6m" path="res://Scripts/UI_Scripts/MagicSquare.gd" id="16_1yxxt"]
[ext_resource type="Texture2D" uid="uid://dplpdhdglo03s" path="res://Artwork/UI/IconScore-Sheet.png" id="17_t3c2j"]
[ext_resource type="FontFile" uid="uid://ck46iqrcecvvq" path="res://Artwork/Text/PearSoda.ttf" id="18_a6sio"]
[ext_resource type="Texture2D" uid="uid://ctsvw25x3sm5u" path="res://Artwork/UI/UIClock.png" id="19_cemlb"]

[sub_resource type="Gradient" id="Gradient_j3c8t"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qk1kx"]
gradient = SubResource("Gradient_j3c8t")
width = 1

[sub_resource type="Animation" id="Animation_bs1rv"]
resource_name = "Hop"
length = 1.33334
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RibbonArms:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.25, 0.416667, 1, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ribbon-faces:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.333333, 0.916666, 1.08333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 3, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.583333, 1.08333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -52), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qk1kx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RibbonArms:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ribbon-faces:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_72xxr"]
resource_name = "control"
length = 4.00002
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 15, 16, 15, 16, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ribbon-faces:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.75, 3.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 9, 12]
}

[sub_resource type="Animation" id="Animation_xlshl"]
resource_name = "explode"
length = 2.00001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RibbonArms:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ribbon-faces:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.666667, 1.16667, 1.75),
"transitions": PackedFloat32Array(0.258816, 0.00105352, 1.05112, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -62), Vector2(0, -62), Vector2(0, 227)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.666667, 1.16667, 1.75),
"transitions": PackedFloat32Array(1.6818, 0.901252, 2.25313, 1),
"update": 0,
"values": [0.0, 3.14159, 3.14159, 6.28319]
}

[sub_resource type="Animation" id="Animation_nxyhc"]
resource_name = "getBox"
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ribbon-faces:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RibbonArms:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_j3c8t"]
resource_name = "idle"
length = 3.50001
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769299, 0.25, 0.416667, 0.5, 0.666667, 0.833334, 1, 1.08333, 1.25, 1.41667, 1.58334, 1.75, 1.82693, 2, 2.16667, 2.25, 2.41667, 2.58333, 2.75, 2.83333, 3, 3.16667, 3.33334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 13, 12, 11, 10, 9, 8, 9, 10, 11, 12, 13, 14, 13, 12, 11, 10, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RibbonArms:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ribbon-faces:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [8, 9, 8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nxyhc"]
_data = {
&"Hop": SubResource("Animation_bs1rv"),
&"RESET": SubResource("Animation_qk1kx"),
&"control": SubResource("Animation_72xxr"),
&"explode": SubResource("Animation_xlshl"),
&"getBox": SubResource("Animation_nxyhc"),
&"idle": SubResource("Animation_j3c8t")
}

[sub_resource type="FontVariation" id="FontVariation_qk1kx"]
spacing_top = -5
spacing_bottom = -470

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f3sbs"]
shader = ExtResource("14_tmr10")
shader_parameter/fov = 1.0
shader_parameter/cull_back = false
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 60.0
shader_parameter/inset = 0.0
shader_parameter/rotation = 0.79

[sub_resource type="LabelSettings" id="LabelSettings_cemlb"]
font = ExtResource("18_a6sio")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jcv13"]
shader = ExtResource("14_tmr10")
shader_parameter/fov = 1.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 60.0
shader_parameter/inset = 0.0
shader_parameter/rotation = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_jcv13"]
font = ExtResource("18_a6sio")
font_color = Color(0.989709, 9.81867e-06, 0.624586, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cemlb"]
shader = ExtResource("14_tmr10")
shader_parameter/fov = 1.0
shader_parameter/cull_back = false
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 60.0
shader_parameter/inset = 0.0
shader_parameter/rotation = 0.79

[node name="Level" type="Node2D" node_paths=PackedStringArray("boxFiller", "boxGrid", "winlosescreen", "magicSquareUI", "winningMagicSquareUI", "listWins", "listLoses")]
texture_filter = 1
script = ExtResource("1_l4uv0")
fallSpeed = 0.6
boxFiller = NodePath("BoxFiller")
boxGrid = NodePath("BaseGridPos")
currentLevelState = ExtResource("2_tmr10")
winlosescreen = NodePath("WinLoseScreen")
magicSquareUI = NodePath("MagicSquare")
winningMagicSquareUI = NodePath("MagicSquareWin")
listWins = NodePath("ListConditions/WinCons")
listLoses = NodePath("ListConditions/LoseCons")

[node name="Border" type="Line2D" parent="."]
texture_repeat = 2
position = Vector2(92, 30)
points = PackedVector2Array(-2, -6, -2, 135, 105, 135, 105, -6)
width = 4.0
texture = ExtResource("4_5aqag")
texture_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Border"]
modulate = Color(0, 0, 0, 0.294118)
z_index = -1
position = Vector2(51, 64)
texture = SubResource("GradientTexture1D_qk1kx")
region_enabled = true
region_rect = Rect2(0, 0, 108, 142)

[node name="BaseGridPos" type="Node2D" parent="." node_paths=PackedStringArray("levelManager", "ribbon")]
position = Vector2(101, 154)
script = ExtResource("5_08tqb")
levelManager = NodePath("..")
ribbon = NodePath("../BoxFiller/Ribbon")
grid_space = 17
grid_size = Vector2i(6, 9)

[node name="BoxFiller" type="Node2D" parent="." node_paths=PackedStringArray("levelGrid")]
position = Vector2(51, 141)
script = ExtResource("6_ve7s6")
levelGrid = NodePath("../BaseGridPos")

[node name="Button" type="Button" parent="BoxFiller"]
visible = false
offset_left = -30.0
offset_top = -65.0
offset_right = 30.0
offset_bottom = -44.0
theme_override_font_sizes/font_size = 9
disabled = true
text = "Reroll Block"
script = ExtResource("7_bu5an")

[node name="Ribbon" type="Node2D" parent="BoxFiller"]
position = Vector2(0, -5)
script = ExtResource("8_ojvbg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BoxFiller/Ribbon"]
root_node = NodePath("../RibbonTest")
libraries = {
&"": SubResource("AnimationLibrary_nxyhc")
}
autoplay = "idle"

[node name="RibbonTest" type="Sprite2D" parent="BoxFiller/Ribbon"]
texture = ExtResource("9_5h57o")
hframes = 5
vframes = 4
frame = 8

[node name="Ribbon-faces" type="Sprite2D" parent="BoxFiller/Ribbon/RibbonTest"]
position = Vector2(0, -16)
texture = ExtResource("10_qdhxq")
hframes = 4
vframes = 4
frame = 8

[node name="RibbonArms" type="Sprite2D" parent="BoxFiller/Ribbon/RibbonTest"]
visible = false
z_index = 6
texture = ExtResource("11_6ge3b")

[node name="StoreBlocks" type="Sprite2D" parent="BoxFiller/Ribbon"]
self_modulate = Color(0.0313726, 0, 0, 1)
position = Vector2(-35, 0)
texture = ExtResource("11_jcv13")

[node name="SpawnPoint" type="Node2D" parent="BoxFiller"]
position = Vector2(0, -140)

[node name="PauseMenu" parent="." instance=ExtResource("12_ig5go")]
visible = false
offset_left = -1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 1.0
script = ExtResource("13_3in4i")

[node name="WinLoseScreen" parent="." node_paths=PackedStringArray("pauseMenu") instance=ExtResource("14_b2ivo")]
pauseMenu = NodePath("../PauseMenu")

[node name="ListConditions" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 85.0
offset_bottom = 113.0

[node name="WinCons" type="Label" parent="ListConditions"]
layout_mode = 0
offset_right = 74.0
offset_bottom = 45.0
theme_override_fonts/font = SubResource("FontVariation_qk1kx")
text = "Win cons:
score:
kill enemies
score on board
_ color blocks"

[node name="LoseCons" type="Label" parent="ListConditions"]
visible = false
layout_mode = 0
offset_left = 163.0
offset_right = 320.0
offset_bottom = 45.0
theme_override_fonts/font = SubResource("FontVariation_qk1kx")
text = "Lose conditions:
Timer: 10.000
Bombs: 1
Enemies alive: 10
Score on board: 20"
horizontal_alignment = 2

[node name="MagicSquare" type="Sprite2D" parent="."]
self_modulate = Color(0.768308, 0.291892, 1, 1)
texture_filter = 1
texture_repeat = 1
material = SubResource("ShaderMaterial_f3sbs")
position = Vector2(263, 145)
texture = ExtResource("15_f3sbs")
region_rect = Rect2(0, 0, 64, 64)
script = ExtResource("16_1yxxt")
rote = 0.785
circlePosition = Vector4(0, 0, 44, 22)

[node name="ItemNode" type="Node2D" parent="MagicSquare"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-46, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="MagicSquare/ItemNode"]
z_index = 2
position = Vector2(0, -11.5)
texture = ExtResource("17_t3c2j")
hframes = 3
vframes = 3

[node name="Label" type="Label" parent="MagicSquare/ItemNode/Sprite2D"]
offset_left = -7.0
offset_top = -7.5
offset_right = 7.0
offset_bottom = 7.5
text = "00"
label_settings = SubResource("LabelSettings_cemlb")
horizontal_alignment = 1

[node name="ItemNode2" type="Node2D" parent="MagicSquare"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-46, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="MagicSquare/ItemNode2"]
z_index = 2
position = Vector2(0, -11.5)
texture = ExtResource("17_t3c2j")
hframes = 3
vframes = 3

[node name="Label" type="Label" parent="MagicSquare/ItemNode2/Sprite2D"]
offset_left = -7.0
offset_top = -7.5
offset_right = 7.0
offset_bottom = 7.5
text = "00"
label_settings = SubResource("LabelSettings_cemlb")
horizontal_alignment = 1

[node name="ItemNode3" type="Node2D" parent="MagicSquare"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-46, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="MagicSquare/ItemNode3"]
z_index = 2
position = Vector2(0, -11.5)
texture = ExtResource("17_t3c2j")
hframes = 3
vframes = 3

[node name="Label" type="Label" parent="MagicSquare/ItemNode3/Sprite2D"]
offset_left = -7.0
offset_top = -7.5
offset_right = 7.0
offset_bottom = 7.5
text = "00"
label_settings = SubResource("LabelSettings_cemlb")
horizontal_alignment = 1

[node name="ItemNode4" type="Node2D" parent="MagicSquare"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-46, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="MagicSquare/ItemNode4"]
z_index = 2
position = Vector2(0, -11.5)
texture = ExtResource("17_t3c2j")
hframes = 3
vframes = 3

[node name="Label" type="Label" parent="MagicSquare/ItemNode4/Sprite2D"]
offset_left = -7.0
offset_top = -7.5
offset_right = 7.0
offset_bottom = 7.5
text = "00"
label_settings = SubResource("LabelSettings_cemlb")
horizontal_alignment = 1

[node name="Clock" type="Sprite2D" parent="MagicSquare"]
modulate = Color(1, 1, 1, 0)
z_index = 1
material = SubResource("ShaderMaterial_jcv13")
scale = Vector2(2, 2)
texture = ExtResource("19_cemlb")

[node name="Label" type="Label" parent="MagicSquare/Clock"]
offset_left = -10.0
offset_top = -4.0
offset_right = 14.0
offset_bottom = 11.0
scale = Vector2(1, 0.56)
text = "1:20"
label_settings = SubResource("LabelSettings_jcv13")
vertical_alignment = 1

[node name="MagicSquareWin" type="Sprite2D" parent="."]
self_modulate = Color(0.14902, 0.913725, 0, 1)
texture_filter = 1
texture_repeat = 1
material = SubResource("ShaderMaterial_cemlb")
position = Vector2(263, 145)
texture = ExtResource("15_f3sbs")
region_rect = Rect2(0, 0, 64, 64)
script = ExtResource("16_1yxxt")
rrot = 1.5
rotSpeed = -0.5
rote = 0.785
circlePosition = Vector4(0, 0, 44, 22)

[node name="ItemNode" type="Node2D" parent="MagicSquareWin"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-46, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="MagicSquareWin/ItemNode"]
z_index = 2
position = Vector2(0, -11.5)
texture = ExtResource("17_t3c2j")
hframes = 3
vframes = 3

[node name="Label" type="Label" parent="MagicSquareWin/ItemNode/Sprite2D"]
offset_left = -7.0
offset_top = -7.5
offset_right = 7.0
offset_bottom = 7.5
text = "00"
label_settings = SubResource("LabelSettings_cemlb")
horizontal_alignment = 1

[node name="ItemNode2" type="Node2D" parent="MagicSquareWin"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-46, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="MagicSquareWin/ItemNode2"]
z_index = 2
position = Vector2(0, -11.5)
texture = ExtResource("17_t3c2j")
hframes = 3
vframes = 3

[node name="Label" type="Label" parent="MagicSquareWin/ItemNode2/Sprite2D"]
offset_left = -7.0
offset_top = -7.5
offset_right = 7.0
offset_bottom = 7.5
text = "00"
label_settings = SubResource("LabelSettings_cemlb")
horizontal_alignment = 1

[node name="ItemNode3" type="Node2D" parent="MagicSquareWin"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-46, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="MagicSquareWin/ItemNode3"]
z_index = 2
position = Vector2(0, -11.5)
texture = ExtResource("17_t3c2j")
hframes = 3
vframes = 3

[node name="Label" type="Label" parent="MagicSquareWin/ItemNode3/Sprite2D"]
offset_left = -7.0
offset_top = -7.5
offset_right = 7.0
offset_bottom = 7.5
text = "00"
label_settings = SubResource("LabelSettings_cemlb")
horizontal_alignment = 1

[node name="ItemNode4" type="Node2D" parent="MagicSquareWin"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-46, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="MagicSquareWin/ItemNode4"]
z_index = 2
position = Vector2(0, -11.5)
texture = ExtResource("17_t3c2j")
hframes = 3
vframes = 3

[node name="Label" type="Label" parent="MagicSquareWin/ItemNode4/Sprite2D"]
offset_left = -7.0
offset_top = -7.5
offset_right = 7.0
offset_bottom = 7.5
text = "00"
label_settings = SubResource("LabelSettings_cemlb")
horizontal_alignment = 1

[node name="Clock" type="Sprite2D" parent="MagicSquareWin"]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_jcv13")
scale = Vector2(2, 2)
texture = ExtResource("19_cemlb")

[node name="Label" type="Label" parent="MagicSquareWin/Clock"]
offset_left = -10.0
offset_top = -4.0
offset_right = 14.0
offset_bottom = 11.0
scale = Vector2(1, 0.56)
text = "1:20"
label_settings = SubResource("LabelSettings_jcv13")
vertical_alignment = 1

[connection signal="pressed" from="BoxFiller/Button" to="BoxFiller" method="_on_reroll_button_pressed"]
[connection signal="pressed" from="BoxFiller/Button" to="BoxFiller/Button" method="_on_pressed"]
